--- a/code/app/andriod/Laundry/res/values/strings.xml
+++ b/code/app/andriod/Laundry/res/values/strings.xml
@@ -2,7 +2,14 @@
 <resources>
 
     <string name="tabbar_default">菜单</string>
-
+    <string name="user_user_name">真实姓名</string>
+    <string name="user_user_sex">性别</string>
+    <string name="user_user_birthday">生日</string>
+    <string name="user_user_phone">手机号码</string>
+    <string name="user_user_email">邮箱</string>
+    <string name="user_user_addr">常用地址</string>
+ 
+    
     <string name="title_activity_user_info">UserInfoActivity</string>
     <string name="title_activity_product_search">ProductSearchActivity</string>
 
