--- a/code/server/MISP/Lang/MispErrorMessage.ini
+++ b/code/server/MISP/Lang/MispErrorMessage.ini
@@ -5,20 +5,32 @@
 3 = 用户不存在
 4 = 登录失败
 5 = 原密码错误
-6 = 用户等级过低
+6 = 版本过低
 7 = 用户已存在
 8 = 搜索结果为空
 9 = 用户名或密码错误
-10 = token 失效
+10 = 用户登录失效
 11 = 数据库操作失败
 12 = 数据库创建失败
 13 = 数据库删除失败
 14 = 数据库更新失败
-15 = 数据库获取失败
+15 = 数据库查询失败
 16 = 上传图片为空
-17 = session失效
-
+17 = 网络连接异常
+18 = 输入为空
+19 = 无权操作
+20 = 无效手机号码
+21 = 验收码无效
+22 = 密码不能为空
+23 = 确认密码不一致
+24 = 更新版本失败
+25 = 权限不存在
+26 = 角色不能为空
+ 
 10000 = 用户未审核
 10001 = 用户审核未通过
 10002 = 激活码已失效
 10003 = 发送验证码失败
+10004 = 公司已存在
+10005 = 不能删除自己
+	
